// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stateful async tests Merges skipped validations from previous suite 1`] = `
Object {
  "done": [Function],
  "errorCount": 1,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {
    "group": Object {
      "field_1": Object {
        "errorCount": 0,
        "errors": Array [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": Array [],
      },
      "field_4": Object {
        "errorCount": 0,
        "errors": Array [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": Array [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": Object {
    "field_1": Object {
      "errorCount": 1,
      "errors": Array [
        "field_message_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_2": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_3": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_4": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;

exports[`Stateful async tests Merges skipped validations from previous suite 2`] = `
Object {
  "errorCount": 2,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {
    "group": Object {
      "field_1": Object {
        "errorCount": 0,
        "errors": Array [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": Array [],
      },
      "field_4": Object {
        "errorCount": 0,
        "errors": Array [],
        "testCount": 0,
        "valid": false,
        "warnCount": 0,
        "warnings": Array [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 3,
  "tests": Object {
    "field_1": Object {
      "errorCount": 1,
      "errors": Array [
        "field_message_1",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_2": Object {
      "errorCount": 1,
      "errors": Array [
        "rejection_message_1",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_3": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_4": Object {
      "errorCount": 0,
      "errors": Array [],
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;

exports[`Stateful async tests Merges skipped validations from previous suite 3`] = `
Object {
  "errorCount": 5,
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": Object {
    "group": Object {
      "field_1": Object {
        "errorCount": 1,
        "errors": Array [
          "field_1_group_message",
        ],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": Array [],
      },
      "field_4": Object {
        "errorCount": 1,
        "errors": Array [
          "field_4_group_message",
        ],
        "testCount": 1,
        "valid": false,
        "warnCount": 0,
        "warnings": Array [],
      },
    },
  },
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "suiteName": undefined,
  "testCount": 7,
  "tests": Object {
    "field_1": Object {
      "errorCount": 2,
      "errors": Array [
        "field_1_group_message",
        "field_message_1",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_2": Object {
      "errorCount": 1,
      "errors": Array [
        "rejection_message_1",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_3": Object {
      "errorCount": 1,
      "errors": Array [
        "field_message_3",
      ],
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
    "field_4": Object {
      "errorCount": 1,
      "errors": Array [
        "field_4_group_message",
      ],
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": Array [],
    },
  },
  "valid": false,
  "warnCount": 0,
}
`;
